garante as parada conversada na reuniao, e deixa xuxu
